--- a/my-helm-chart/values.yaml
+++ b/my-helm-chart/values.yaml
@@ -1,11 +1,19 @@
-replicaCount: 1
+replicaCount: 2
 
 image:
   repository: 607838039722.dkr.ecr.us-east-1.amazonaws.com/ansibleproject
   pullPolicy: IfNotPresent
-  tag: 2
+  tag: "2"
 
 service:
   type: NodePort
   port: 80
   nodePort: 30085
+
+resources:
+  requests:
+    cpu: "250m"
+    memory: "512Mi"
+  limits:
+    cpu: "500m"
+    memory: "1Gi"
